--- a/app/src/main/res/layout/activity_join_game.xml
+++ b/app/src/main/res/layout/activity_join_game.xml
@@ -8,29 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center">
-        <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/ballerz_meet"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:onClick="handleImageClicked"/>
-
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:text="Ballerz Meet"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/ballerz"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:textStyle="bold"/>
+        android:id = "@+id/selection"
+        android:layout_marginBottom="60dp"
+        android:layout_marginTop="140dp"
+        android:padding="20dp"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -148,34 +130,5 @@
         </LinearLayout>
     </LinearLayout>
 
-
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:background="#999999">
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Profile"
-            android:id="@+id/profileBT"
-            android:onClick="handleProfileClicked"/>
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Find Game"
-            android:onClick="handleFindClicked"
-            android:id="@+id/findGameBT" />
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Create Game"
-            android:id="@+id/startGameBT"
-            android:onClick="handleStartClicked"/>
-    </LinearLayout>
 </RelativeLayout>
 
