--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -10,37 +10,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop = "true"
-        android:orientation="vertical">
-        <ImageView
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/ballerz_meet"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:layout_gravity="center"
-            android:layout_margin="10dp"
-            android:onClick="handleImageClicked"/>
-
-        <TextView
-            android:layout_width="250dp"
-            android:layout_height="wrap_content"
-            android:text="Ballerz Meet"
-            android:gravity="center"
-            android:textSize="25sp"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/ballerz"
-            android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
-            android:textStyle="bold"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id = "@+id/selection"
         android:layout_marginBottom="60dp"
         android:layout_marginTop="140dp"
-        android:padding="20dp"
+        android:padding="0dp"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
@@ -49,12 +22,12 @@
             android:padding="10dp">
 
             <TextView
-                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="User: "
                 android:textStyle="bold"
-                android:gravity="center|right"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:gravity="right"
+                android:layout_width="150dp" />
             <TextView
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
@@ -70,12 +43,12 @@
             android:padding="10dp">
 
             <TextView
-                android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:text="Skill Level: "
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:gravity="center|right"/>
+                android:gravity="right"
+                android:layout_width="150dp" />
             <TextView
                 android:layout_width="250dp"
                 android:layout_height="wrap_content"
@@ -85,32 +58,5 @@
 
         </LinearLayout>
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_gravity="bottom"
-        android:layout_alignParentBottom="true"
-        android:background="#999999">
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Profile"
-            android:id="@+id/profileBT"
-            android:onClick="handleProfileClicked"/>
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Find Game"
-            android:onClick="handleFindClicked"
-            android:id="@+id/findGameBT" />
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:text="Create Game"
-            android:id="@+id/startGameBT"
-            android:onClick="handleStartClicked"/>
 
-    </LinearLayout>
 </RelativeLayout>
