--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,6 +38,12 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
+    <FrameLayout
+        android:id="@+id/fragment"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    </FrameLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
@@ -45,26 +51,93 @@
         android:gravity="center"
         android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
-        android:background="#999999">
-        <Button
-            android:layout_width="120dp"
+        android:background="#6099FF">
+        <LinearLayout
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Profile"
-            android:id="@+id/profileBT"
-            android:onClick="handleProfileClicked"/>
-        <Button
-            android:layout_width="120dp"
+            android:gravity="center"
+            android:padding="2dp"
+            android:orientation="vertical">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/homeBT"
+                android:onClick="handleHomeClicked"
+                android:background="#6099FF"
+                android:src="@drawable/ic_home"
+                android:scaleType="fitCenter"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Home"
+                android:textStyle="bold"
+                android:textColor="#333333"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Find Game"
-            android:onClick="handleFindClicked"
-            android:id="@+id/findGameBT" />
-        <Button
-            android:layout_width="120dp"
+            android:padding="2dp"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/searchBT"
+                android:onClick="handleSearchClicked"
+                android:background="#6099FF"
+                android:src="@drawable/ic_search"
+                android:scaleType="fitCenter"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Search"
+                android:textStyle="bold"
+                android:textColor="#333333"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="90dp"
             android:layout_height="wrap_content"
-            android:text="Create Game"
-            android:id="@+id/startGameBT"
-            android:onClick="handleStartClicked"/>
+            android:padding="2dp"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/createBT"
+                android:onClick="handleCreateClicked"
+                android:background="#6099FF"
+                android:src="@drawable/ic_plus"
+                android:scaleType="fitCenter"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Create"
+                android:textStyle="bold"
+                android:textColor="#333333"/>
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            android:padding="2dp"
+            android:gravity="center"
+            android:orientation="vertical">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/profileBT"
+                android:onClick="handleProfileClicked"
+                android:background="#6099FF"
+                android:src="@drawable/ic_profile"
+                android:scaleType="fitCenter"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Profile"
+                android:textStyle="bold"
+                android:textColor="#333333"/>
+        </LinearLayout>
+
 
     </LinearLayout>
 
-</RelativeLayout>
+</FrameLayout>
