--- a/app/src/main/res/layout/activity_start_game.xml
+++ b/app/src/main/res/layout/activity_start_game.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_find_game"
+    android:id="@+id/activity_start_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".control.FindGameFragment">
+    tools:context=".control.CreateGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -76,7 +76,7 @@
                     android:layout_marginTop="25dp"
                     android:onClick="handleStartGameClick"
                     android:text="Create This Game"
-                    android:id="@+id/search" />
+                    android:id="@+id/searchGames" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
