--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_find_game"
+    android:id="@+id/activity_start_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".control.FindGameFragment">
+    tools:context=".control.CreateGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,11 +14,11 @@
         android:layout_marginTop="140dp">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/scrollView2" >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:paddingBottom="20dp"
@@ -28,8 +28,13 @@
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Search for a game in your area!"
+                    android:text="When, where, how many playas?"
                     android:layout_marginBottom="20dp"/>
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    android:id="@+id/map"
+                    android:name="com.google.android.gms.maps.MapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp" />
                 <TextView
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
@@ -38,7 +43,7 @@
                     android:layout_marginBottom="20dp"/>
                 <CalendarView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:id="@+id/calendarView" />
                 <TextView
                     android:paddingLeft="10dp"
@@ -56,44 +61,22 @@
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Choose the distance you will travel"
+                    android:text="Choose the number of players"
                     android:layout_marginTop="50dp"/>
-                <SeekBar
+
+                <NumberPicker
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:max ="9"
-                    android:progress = "2"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:progressDrawable="@color/colorPrimaryDark"/>
-                <RelativeLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal" >
-                <TextView
-                    android:id="@+id/tvLabel1"
-                    android:paddingLeft="10dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="1" />
-                <TextView
-                    android:id="@+id/tvLabel3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentRight="true"
-                    android:paddingRight="10dp"
-                    android:text="10" />
-                </RelativeLayout>
+                    android:id="@+id/numberPicker" />
 
                 <Button
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="25dp"
-                    android:text="Find Game"
-                    android:id="@+id/search"
-                    android:onClick="handleSearch"/>
+                    android:onClick="handleCreateGameClicked"
+                    android:text="Create This Game"
+                    android:id="@+id/searchGames" />
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
