--- a/app/src/main/res/layout/fragment_find_game.xml
+++ b/app/src/main/res/layout/fragment_find_game.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_start_game"
+    android:id="@+id/activity_find_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".control.CreateGameFragment">
+    tools:context=".control.FindGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,11 +14,11 @@
         android:layout_marginTop="140dp">
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/scrollView2" >
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:gravity="center"
                 android:paddingBottom="20dp"
@@ -28,13 +28,8 @@
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="When, where, how many playas?"
+                    android:text="Search for a game in your area!"
                     android:layout_marginBottom="20dp"/>
-                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.MapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp" />
                 <TextView
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
@@ -43,7 +38,7 @@
                     android:layout_marginBottom="20dp"/>
                 <CalendarView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:id="@+id/calendarView" />
                 <TextView
                     android:paddingLeft="10dp"
@@ -61,22 +56,44 @@
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Choose the number of players"
+                    android:text="Choose the distance you will travel"
                     android:layout_marginTop="50dp"/>
-
-                <NumberPicker
+                <SeekBar
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/numberPicker" />
+                    android:max ="9"
+                    android:progress = "2"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:progressDrawable="@color/colorPrimaryDark"/>
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:orientation="horizontal" >
+                <TextView
+                    android:id="@+id/tvLabel1"
+                    android:paddingLeft="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1" />
+                <TextView
+                    android:id="@+id/tvLabel3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:paddingRight="10dp"
+                    android:text="10" />
+                </RelativeLayout>
 
                 <Button
                     android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_marginTop="25dp"
-                    android:onClick="handleStartGameClick"
-                    android:text="Create This Game"
-                    android:id="@+id/searchGames" />
+                    android:text="Find Game"
+                    android:id="@+id/search"
+                    android:onClick="handleSearchClicked"/>
             </LinearLayout>
         </ScrollView>
     </LinearLayout>
