--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,19 +30,19 @@
             android:layout_height="wrap_content"
             android:text="Ballerz Meet"
             android:gravity="center"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:layout_centerHorizontal="true"
             android:id="@+id/ballerz"
             android:layout_gravity="center"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="5dp"
             android:textStyle="bold"/>
     </LinearLayout>
 
     <FrameLayout
         android:id="@+id/fragment"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center">
     </FrameLayout>
 
     <LinearLayout
