--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_start_game"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".control.CreateGameFragment">
+    tools:context="com.ballersmeet.sruti.ballersmeet.control.CreateGameFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
