--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -6,8 +6,17 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".control.HomeScreenFragment"
+    tools:context="com.ballersmeet.sruti.ballersmeet.control.HomeScreenFragment"
     android:weightSum="1">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Your Upcoming Games"
+        android:id="@+id/upcomingGames"
+        android:textSize="30sp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,14 +25,7 @@
         android:layout_marginBottom="20dp"
         android:layout_marginTop="20dp"
         android:orientation="vertical">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Your Upcoming Games"
-            android:id="@+id/upcomingGames"
-            android:layout_gravity="center"
-            android:textSize="30sp"
-            android:layout_marginBottom="10dp"/>
+
         <ListView
             android:id="@+id/list"
             android:layout_width="wrap_content"
