--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -9,34 +9,45 @@
     tools:context="com.ballersmeet.sruti.ballersmeet.control.HomeScreenFragment"
     android:weightSum="1">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Your Upcoming Games"
-        android:id="@+id/upcomingGames"
-        android:textSize="30sp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id = "@+id/selection"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="20dp"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/scrollView2" >
 
-        <ListView
-            android:id="@+id/list"
-            android:layout_width="wrap_content"
-            android:layout_height="300dp"
-            android:fillViewport="true"
-            android:scrollbars="vertical"
-            android:smoothScrollbar="true"
-            android:layout_gravity="center"
-            android:layout_margin="10dp">
-        </ListView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id = "@+id/selection"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="20dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Your Upcoming Games"
+                    android:id="@+id/upcomingGames"
+                    android:textSize="30sp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="10dp"/>
+
+                <ListView
+                    android:id="@+id/list"
+                    android:layout_width="wrap_content"
+                    android:layout_height="300dp"
+                    android:fillViewport="true"
+                    android:scrollbars="vertical"
+                    android:smoothScrollbar="true"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp">
+                </ListView>
+            </LinearLayout>
+
+        </ScrollView>
     </LinearLayout>
-
 
 </RelativeLayout>
