--- a/app/src/main/res/layout/fragment_create_game.xml
+++ b/app/src/main/res/layout/fragment_create_game.xml
@@ -30,11 +30,11 @@
                     android:layout_height="wrap_content"
                     android:text="When, where, how many playas?"
                     android:layout_marginBottom="20dp"/>
-                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    android:id="@+id/map"
-                    android:name="com.google.android.gms.maps.MapFragment"
+                <FrameLayout
+                    android:id="@+id/container"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp" />
+                    android:layout_height="match_parent"
+                    android:background="@android:color/transparent" />
                 <TextView
                     android:paddingLeft="10dp"
                     android:layout_width="wrap_content"
